added validation and missing arguments